[package]
authors = ["Carter Reeb <carter2k4@pm.me>"]
edition = "2018"
name = "imager"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.clap]
default-features = false
version = "2.33"

features = ["suggestions", "color"]

[dependencies]
gdk = "0.13.2"
gio = "0.9.1"
gtk = "0.9.2"
image = "0.23.14"
yansi = "0.5.0"
